--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,19 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
-
+  font-weight: 500;  
   color-scheme: light dark;
   color: #b7bbc3;
   background-color: #111827;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  color: #b7bbc3;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #b7bbc3;
 }
 
 body {
@@ -36,22 +30,12 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+
 }
 button:hover {
-  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
@@ -59,10 +43,14 @@ button:focus-visible {
     color: rgb(75 85 99);
     background-color: rgb(249 250 251);
   }
+
+  a {
+    color: rgb(75 85 99);
+    text-decoration: inherit;
+  }
   a:hover {
-    color: #747bff;
+    color: rgb(75 85 99);
   }
   button {
-    background-color: #f9f9f9;
   }
 }
