--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,19 +2,23 @@
 
 /* Basic styling for the header */
 header {
+  box-sizing: border-box;
   width: 100%;
-  padding: 1rem 0;
+  padding: 0 .2rem;
   display: flex;
   justify-content: space-between; /* Space between elements */
   align-items: center; /* Center items vertically */
-  border: 1px solid #ccc;
+  border: 3px solid;
+  border-radius: 1px;
 }
-
+.logo {
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin-left: 1rem;
+}
 /* Styling for the navigation */
 nav {
-  width: 100%;
   display: flex;
-  justify-content: flex-end; /* Align items to the right */
 }
 
 /* Styling for the list of links */
@@ -28,19 +32,51 @@ ul {
 
 /* Styling for individual list items */
 li {
+  box-sizing: border-box;
+  padding: 16px 0;
   display: flex;
   align-items: center;
   margin-right: 1rem;
 }
 
 /* Styling for the links */
-a {
+nav a {
   text-decoration: none;
   display: flex;
   align-items: center;
+  font-size: .9em;
+  font-weight: 600;
+
 }
 
-/* Styling for the cart icon */
 .cart-icon {
-  margin-left: 0.5rem;
+  padding: 0 7px;
+  border: 3px solid;
+  border-radius: 1px;
+  margin-left: 0.4rem;
+}
+
+@media (max-width: 768px) {
+  header {
+    box-sizing: content-box;
+    flex-direction: column;
+    border-top: none;
+  }
+
+  header nav {
+    justify-content: space-between;
+  }
+
+  header nav ul {
+    width: 100%;
+  }
+
+  header nav ul li {
+    margin-left: 0;
+    margin-top: 0.5rem;
+  }
+  .logo {
+
+    margin-left: 0;
+  }
 }
