--- a/src/components/CartTooltip/CartTooltip.css
+++ b/src/components/CartTooltip/CartTooltip.css
@@ -1,5 +1,3 @@
-/* src/styles/cart.css */
-
 .cart {
 	display: none;
 	padding: 2rem;
@@ -22,6 +20,10 @@
 }
 
 .cart.hover {
+  display: block;
+}
+
+.cart.open {
   display: block;
 }
 
