--- a/src/components/Header/CartTooltip/CartTooltip.css
+++ b/src/components/Header/CartTooltip/CartTooltip.css
@@ -2,15 +2,14 @@
 	display: none;
 	padding: 2rem;
 	border: 3px solid;
-	/* border-width: 3px 0px 3px 3px; */
 	border-radius: 7px;
 	z-index: 1000;
 	position: absolute;
-	top: 100px;
-	right: 30px;
+	top: 60px;
+	right: 39px;
 	width: 100%;
 	max-width: 400px;
-	background-color: #111827;
+	background-color: var(--background-color-dark);
 	/* overflow-y: auto; */
 	max-height: calc(100vh - 60px - 4rem);
 }
@@ -31,25 +30,25 @@
 	content: '';
 	position: absolute;
 	top: -11px;
-	right: 26px;
+	right: 12px;
 	width: 15px;
 	height: 15px;
-	border-right: 3px solid #b7bbc3;
-	border-top: 3px solid #b7bbc3;
+	border-right: 3px solid;
+	border-top: 3px solid;
 	transform: rotate(-45deg);
 	z-index: 1000;
-	background-color: #111827;
+	background-color: var(--background-color-dark);
 }
 
 .cart::before {
 	content: '';
 	position: absolute;
 	top: -19px;
-	right: 12px;
+	right: 0px;
 	width: 85px;
 	height: 22px;
 	z-index: 1000;
-	background-color: #111827;
+	background-color: var(--background-color-dark);
 	opacity: 0;
 }
 
@@ -57,24 +56,31 @@
   .cart {
     width: 50%; /* Full width on narrow screens */
     margin: 0; /* Remove margin */
-    top: 92px;
-    right: 0px;
-    border-right-width: 0;
-    border-radius: 7px 0 0 7px;
+    top: 89px;
+    right: 13px;
   }
   .cart::after {
     top: -11px;
-    right: 31px;
+    right: 13px;
   }
   .cart::before {
     top: -8px;
-    right: 21px;
+    right: -3px;
   }
 }
 
 @media (prefers-color-scheme: light) {
   .cart {
-    background-color: rgb(249 250 251);
+    background-color: var(--background-color-light);
   }
+
+  .cart::after {
+	  background-color: var(--background-color-light);
+  }
+  
+  .cart::before {
+	  background-color: var(--background-color-light);
+  }
+  
 }
 
