--- a/src/components/ProductSection/ProductItem/ProductItem.css
+++ b/src/components/ProductSection/ProductItem/ProductItem.css
@@ -7,7 +7,8 @@
 }
 
 .product-item {
-  border: 1px solid;
+  background-color: light-dark(var(--color-100), var(--content-background-dark));
+  border: 1px solid transparent;
   border-radius: 8px;
   aspect-ratio: 9 / 10;
   display: flex;
