--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,43 @@
   --color-blue: #3895ff;
   --color-blue-dark: #2666dc;
 
-  --background-color-dark: #111827;
-  --background-color-light: rgb(249 250 251);
+
+  --black-050: hsl(0, 0%, 100%);
+  --black-100: hsl(210, 8%, 98%);
+  --black-150: hsl(210, 8%, 95%);
+  --black-200: hsl(210, 8%, 90%);
+  --black-225: hsl(210, 8%, 85%);
+  --black-250: hsl(210, 8%, 80%);
+  --black-300: hsl(210, 9%, 75%);
+  --black-350: hsl(210, 8%, 68%);
+  --black-400: hsl(210, 8%, 42%);
+  --black-500: hsl(210, 8%, 25%);
+  --black-600: hsl(210, 8%, 5%);
+
+
+  --body-background-dark: #111827;
+  --content-background-dark: #1a2335;
+
   --color-dark: #b7bbc3;
-  --color-light: rgb(75 85 99);
+
+  --body-background-light: var(--black-050);
+  /* --content-background-light: var(--black-100); */
+  --content-background-light: var(--color-100);
+  --component-background-light: var(--black-100);
+  --color-light: var(--black-600);
+
+
+  --fs-headline2: 2.61538461rem;
+  --fs-display1: 3.30769231rem;
+  --fs-display2: 4.23076923rem;
+  --fs-display3: 5.30769231rem;
+  --fs-display4: 7.61538461rem;
+  --fs-headline1: 2.07692308rem;
+  --fs-title: 1.61538462rem;
+  --fs-subheading: 1.46153846rem;
+  --fs-fine: 11px;
+  --fs-caption: 12px;
+  --fs-body1: 13px;
 }
 
 :root {
@@ -29,7 +62,7 @@
   font-weight: 500;  
   color-scheme: light dark;
   color: var(--color-dark);
-  background-color: var(--background-color-dark);
+  background-color: var(--body-background-dark);
 }
 
 a {
@@ -48,9 +81,37 @@ body {
   min-height: 100vh;
 }
 
+/* Logo */
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 40px;
+  font-weight: 700;
+  letter-spacing: -2px;
+}
+
+/* Titles */
+h2 {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+/* Product Names, Secondary Titles, Navbar Links */
+h3 {
+  font-size: 16px;
+  font-weight: 600;
+  margin: 0;
+}
+
+/* Family Names */
+h4 {
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--color-600);
+}
+
+/* Product Price */
+h5 {
+  font-size: 16px;
+  font-weight: 600;
 }
 
 button {
@@ -65,7 +126,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: var(--color-light);
-    background-color: var(--background-color-light);
+    background-color: var(--body-background-light);
   }
 
   a {
