--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 #root {
-  margin: 0 auto;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
+  height: 100%;
 }
