--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,14 +3,29 @@
 header {
     box-sizing: border-box;
     width: 100%;
-    padding: 0 35px;
-    display: flex;
-    justify-content: space-between; /* Space between elements */
-    align-items: center; /* Center items vertically */
     border: 1px solid var(--color-300);
     border-width: 0 0 1px 0;
   }
-  .logo {
+
+.navbar-right,
+.navbar-left,
+.right-icons {
+  display: flex;
+  align-items: center;
+}
+.navbar-right {
+  gap: 30px;
+}
+
+.navbar-left {
+  gap: 50px;
+}
+
+.right-icons {
+  gap: 10px;
+}
+
+  .logo h1 {
     font-size: 1.4rem;
     font-weight: 700;
     letter-spacing: -2px;
@@ -22,11 +37,10 @@ header {
     align-items: center;
   }
   
-  .nav-links {
+  .navbar {
     display: flex;
-    justify-content: flex-end; /* Align items to the right */
-    align-items: center;
-    padding: 0;
+    justify-content: space-between;
+    padding: 0 50px;
     margin: 0;
   }
 
@@ -35,7 +49,9 @@ header {
     display: flex;
     align-items: center;
   }
-
+  nav a:hover {
+    background-color: light-dark(var(--color-100), #1a2335);
+  }
   
   .left-links {
     box-sizing: border-box;
