--- a/src/components/ProductSection/ProductSection.css
+++ b/src/components/ProductSection/ProductSection.css
@@ -3,7 +3,7 @@
     max-width: 1600px;
     gap: 20px;
     padding: 50px;
-    padding-left: 0;
+    /* padding-left: 0; */
     flex: 1;
     display: flex;
     /* width: 100%; */
