--- a/src/components/Header/NavbarCart/NavbarCart.module.css
+++ b/src/components/Header/NavbarCart/NavbarCart.module.css
@@ -3,22 +3,21 @@
   } */
   
   .cart {
-    height: 30px;
-    width: 30px;
+    height: 34px;
+    width: 34px;
+    fill: light-dark(var(--color-light), var(--color-dark));
   }
   
-  .number {
-    pointer-events: none;
-    font-weight: 700;
-    font-size: 9px;
-  }
-  
+
   .cartContainer {
     position: relative;
   }
   
   .number {
     position: absolute;
-    top: 14.5px;
-    left: 12.5px;
+    top: 8.5px;
+    left: 10.5px;
+    pointer-events: none;
+    font-weight: 700;
+    font-size: 10px;
   }
