nav setup complete

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,29 @@
 /* src/styles/header.css */
 
 header {
-    box-sizing: border-box;
-    width: 100%;
-    border: 1px solid var(--color-300);
-    border-width: 0 0 1px 0;
-  }
+  box-sizing: border-box;
+  width: 100%;
+  border: 1px solid var(--color-300);
+  border-width: 0 0 1px 0;
+}
+
+header h1, header h2, header h3 {
+  margin: 0;
+  padding: 0;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 50px;
+  margin: 0;
+}
+
+nav a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
 
 .navbar-right,
 .navbar-left,
@@ -25,97 +43,46 @@ header {
   gap: 10px;
 }
 
-  .logo h1 {
-    font-size: 1.4rem;
-    font-weight: 700;
-    letter-spacing: -2px;
-    margin-left: 1rem;
+.logo h1 {
+  font-size: 1.4rem;
+  font-weight: 700;
+  letter-spacing: -2px;
+}
+
+.navbar-links {
+  display: flex;
+}
+
+.navbar-links a {
+  padding: 15px 10px;
+}
+/* nav a:hover {
+  background-color: light-dark(var(--color-100), #1a2335);
+} */
+
+.cart-link {
+  position: relative;
+}
+
+@media (max-width: 768px) {
+  header {
+    box-sizing: content-box;
+    flex-direction: column;
+    padding: 0px;
   }
-  header nav {
-    display: flex;
-    justify-content: flex-end; /* Align items to the right */
-    align-items: center;
+
+  .logo {
+    display: none;
   }
-  
+
   .navbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 50px;
-    margin: 0;
-  }
-
-  nav a {
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-  }
-  nav a:hover {
-    background-color: light-dark(var(--color-100), #1a2335);
-  }
-  
-  .left-links {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-  }
-  .left-links a {
-    padding: 18px 14px;
-  }
-  .cart-link a {
-    padding: 18px 14px;
-    font-size: .9em;
-    font-weight: 600;
-    border-radius: 3px;
-  }
-
-  .cart-link a:hover {
-    background-color: light-dark(var(--color-100), #1a2335);
-  }
-  
-  .cart-link {
     position: relative;
+    padding-left: 15px;
   }
-  
-  .cart-icon {
-    padding: 0 7px;
-    border: 3px solid;
-    border-radius: 1px;
-    margin-left: 0.4rem;
-  }
-  
-  @media (max-width: 768px) {
-    header {
-      box-sizing: content-box;
-      flex-direction: column;
-      padding: 0px;
 
-    }
-  
-    .nav-links {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 100%;
-    }
-  
-    .nav-links .left-links {
-      display: flex;
-      justify-content: center;
-      flex: 1;
-    }
-  
-    .nav-links .right-link {
-      display: flex;
-      justify-content: flex-end;
-      flex: 1;
-    }
-    .logo {
-  
-      margin-left: 0;
-    }
-  
-    .cart-link {
-      position: absolute;
-      right: 10px;
-    }
+
+  .right-icons {
+    right: 25px;
+    position: absolute;
   }
+}
