--- a/src/components/Header/NavbarCart/NavbarCart.module.css
+++ b/src/components/Header/NavbarCart/NavbarCart.module.css
@@ -1,10 +1,11 @@
 .navbarCart a {
   padding-left: 6px;
+  padding-top: 2px;
 }
   
   .cart {
-    height: 34px;
-    width: 34px;
+    height: 30px;
+    width: 30px;
     fill: light-dark(var(--color-light), var(--color-dark));
   }
   
@@ -15,8 +16,8 @@
   
   .number {
     position: absolute;
-    top: 8.5px;
-    left: 10.5px;
+    top: 12.5px;
+    left: 11.5px;
     pointer-events: none;
     font-weight: 700;
     font-size: 10px;
