--- a/src/components/ProductSection/ProductItem/ProductItem.css
+++ b/src/components/ProductSection/ProductItem/ProductItem.css
@@ -2,13 +2,12 @@
 
 .product-item {
   --spacing: 25px;
-  --image-size: 60px;
+  --image-size: 115px;
   --icon-size: 26px;
 }
 
 .product-item {
   background-color: light-dark(var(--color-100), var(--content-background-dark));
-  border: 1px solid transparent;
   border-radius: 8px;
   aspect-ratio: 9 / 10;
   display: flex;
@@ -18,30 +17,83 @@
 }
 
 .product-image {
-  width: 35px;
-  height: 35px;
-  margin: auto; /* Center the image horizontally */
+  transform: translateY(-10px);
+  height: var(--image-size);
+  width: var(--image-size);
 }
 
-.product-details {
-  flex-grow: 1;
-  margin-left: 10px;
-  text-align: left;
+
+.product-item:hover .product-image {
+  transform: translate(-5px, -15px) scale(1.3, 1.3) rotate(-14deg) skewX(0) skewY(0);
+  transition: transform 0.3s ease;
 }
 
-.product-details h3,
-.product-details p {
+.product-info {
+  position: absolute;
+  bottom: var(--spacing);
+  left: var(--spacing);
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.product-info h3,
+.product-info p {
   margin: 0;
+  font-size: 16px;
 }
 
-.top-right-button {
+.product-info p {
+  color: var(--color-400);
+}
+
+.top-right-icon {
   position: absolute;
   top: 10px;
   right: 10px;
 }
 
-.bottom-right-button {
+.bottom-right-icon {
   position: absolute;
   bottom: 10px;
   right: 10px;
+}
+
+@media screen and (max-width: 940px) {
+  .product-item {
+    --spacing: 15px;
+    aspect-ratio: 9 / 12;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .product-item {
+    --spacing: 20px;
+    aspect-ratio: 9 / 10;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .product-item {
+    --spacing: 12px;
+    --image-size: 72px;
+    --icon-size: 20px;
+    border-radius: 5px;
+    aspect-ratio: 10 / 12;
+  }
+
+  .product-info h3,
+  .product-info p {
+    font-size: 12px;
+  }
+
+  .product-info {
+    gap: 4px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .product-item {
+    aspect-ratio: 10 / 16;
+  }
 }
