--- a/src/components/ProductSection/ProductItem/ProductItem.css
+++ b/src/components/ProductSection/ProductItem/ProductItem.css
@@ -22,9 +22,19 @@
   width: var(--image-size);
 }
 
+.product-image-odd {
+  transform: translateY(-10px);
+  height: var(--image-size);
+  width: var(--image-size);
+}
 
 .product-item:hover .product-image {
   transform: translate(-5px, -15px) scale(1.3, 1.3) rotate(-14deg) skewX(0) skewY(0);
+  transition: transform 0.3s ease;
+}
+
+.product-item:hover .product-image-odd {
+  transform: translate(-5px, -15px) scale(1.3, 1.3) rotate(14deg) skewX(0) skewY(0);
   transition: transform 0.3s ease;
 }
 
