--- a/src/components/ProductSection/ProductItem/ProductItem.css
+++ b/src/components/ProductSection/ProductItem/ProductItem.css
@@ -3,7 +3,7 @@
 .product-item {
   --spacing: 25px;
   --image-size: 115px;
-  --icon-size: 26px;
+  --icon-size: 30px;
 }
 
 .product-item {
@@ -16,25 +16,20 @@
   position: relative;
 }
 
-.product-image {
+.product-image, .product-image-odd {
   transform: translateY(-10px);
   height: var(--image-size);
   width: var(--image-size);
 }
 
-.product-image-odd {
-  transform: translateY(-10px);
-  height: var(--image-size);
-  width: var(--image-size);
-}
 
 .product-item:hover .product-image {
-  transform: translate(-5px, -15px) scale(1.3, 1.3) rotate(-14deg) skewX(0) skewY(0);
+  transform: translate(-5px, -15px) scale(1.2, 1.2) rotate(-11deg) skewX(0) skewY(0);
   transition: transform 0.3s ease;
 }
 
 .product-item:hover .product-image-odd {
-  transform: translate(-5px, -15px) scale(1.3, 1.3) rotate(14deg) skewX(0) skewY(0);
+  transform: translate(-5px, -15px) scale(1.2, 1.2) rotate(11deg) skewX(0) skewY(0);
   transition: transform 0.3s ease;
 }
 
@@ -57,16 +52,26 @@
   color: var(--color-400);
 }
 
+.favorite,
+.add-to-cart {
+  width: var(--icon-size);
+  height: var(--icon-size);
+  cursor: pointer;
+  fill: light-dark(var(--color-light), var(--color-dark));
+}
+
 .top-right-icon {
   position: absolute;
   top: 10px;
   right: 10px;
 }
 
-.bottom-right-icon {
+
+.add-to-cart {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: var(--spacing);
+  right: var(--spacing);
+  transition: transform 0.2s ease;
 }
 
 @media screen and (max-width: 940px) {
