--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,15 @@
   background-color: var(--body-background-dark);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
 a {
   color: var(--color-dark);
   text-decoration: inherit;
