use opacity and visibility instead of display to handle cart tooltip

--- a/src/components/Header/CartTooltip/CartTooltip.css
+++ b/src/components/Header/CartTooltip/CartTooltip.css
@@ -1,18 +1,20 @@
 .cart {
-	display: none;
-	padding: 2rem;
-	border: 1px solid var(--color-300);
-	border-radius: 7px;
-	z-index: 1000;
-	position: absolute;
-	top: 80px;
-	right: 43px;
-	width: 100%;
-	max-width: 400px;
-	background-color: light-dark(var(--body-background-light), var(--content-background-dark));
-	/* overflow-y: auto; */
-	max-height: calc(100vh - 60px - 4rem);
-	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.2s ease-in-out 0.2s, visibility 0.2s ease-in-out 0.2s;
+    padding: 2rem;
+    border: 1px solid var(--color-300);
+    border-radius: 7px;
+    z-index: 1000;
+    position: absolute;
+    top: 80px;
+    right: 43px;
+    width: 100%;
+    max-width: 400px;
+    background-color: light-dark(var(--body-background-light), var(--content-background-dark));
+    /* overflow-y: auto; */
+    max-height: calc(100vh - 60px - 4rem);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .cart p {
@@ -20,11 +22,13 @@
 }
 
 .cart.hover {
-  display: block;
+	opacity: 1;
+	visibility: visible;
 }
 
 .cart.open {
-  display: block;
+	opacity: 1;
+	visibility: visible;
 }
 
 /* .cart::after {
@@ -41,7 +45,7 @@
 	background-color: light-dark(var(--content-background-light), var(--body-background-dark));
 } */
 
-.cart::before {
+/* .cart::before {
 	content: '';
 	position: absolute;
 	top: -19px;
@@ -51,7 +55,7 @@
 	z-index: 1000;
 	background-color: light-dark(var(--content-background-light), var(--body-background-dark));
 	opacity: 0;
-}
+} */
 
 @media (max-width: 768px) {
   .cart {
